# anything-digital-pet

./: .gitignore  CLAUDE.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: create-pet-cli.md  create-pet-link.md  pet.md
.claude/skills/create-pet/: SKILL.md
.claude/skills/create-pet-cli/: SKILL.md
.claude/skills/pet/: SKILL.md
docs/superpowers/plans/: 2026-04-01-anything-digital-pet-mvp.md  2026-04-02-desktop-pet-v2.md  2026-04-02-pet-ui-polish.md  2026-04-03-pet-trading.md
docs/superpowers/specs/: 2026-04-02-desktop-pet-v2-design.md  2026-04-03-pet-trading-design.md
engine/: create.ts  persona.ts  tarot.ts
engine/__tests__/: create.test.ts
hooks/: hooks.json  pet-hook.js
plugins/anything-digital-pet/: package.json
plugins/anything-digital-pet/.claude-plugin/: plugin.json
plugins/anything-digital-pet/engine/: create.ts  types.ts
plugins/anything-digital-pet/engine/__tests__/: bazi.test.ts  hash.test.ts  tarot.test.ts
plugins/anything-digital-pet/skills/create-pet/: SKILL.md
plugins/anything-digital-pet/skills/pet/: SKILL.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  server.rs  tray.rs
src/app/: layout.tsx  page.tsx
src/lib/: avatar.ts  bazi.ts  hash.ts  mbti.ts  persona.ts  tarot.ts
src/lib/__tests__/: avatar.test.ts  mbti.test.ts  tarot.test.ts
src/types/: pet.ts
ui/: bubble.js  drag.js  index.html  info-card.js  interact.js  main.js  renderer.js  style.css  tarot.js
(+3 files in other folders)
